--- a/src/styles.css
+++ b/src/styles.css
@@ -182,6 +182,11 @@ textarea {
 	border-radius: 50%;
 }
 
+.tecla-list-item-icon.small {
+	width: 16px;
+	height: 16px;
+}
+
 .tecla-list-item-content {
 	flex: 1 1 auto;
 }
